[package]
name = "boringtun-cli"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.7.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>", "Andy Grover <agrover@cloudflare.com>", "Jeff Hiner <jhiner@cloudflare.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/cloudflare/boringtun"
documentation = "https://docs.rs/boringtun/0.7.0/boringtun/"
edition = "2021"

[dependencies]
daemonize = "0.4.1"
clap = { version = "4.6.0", features = ["env"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.5"

[dependencies.boringtun]
version = "0.7.0"
path = "../boringtun"
features = ["device"]
