[package]
name = "boringtun"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.6.1"
authors = [
    "Noah Kennedy <nkennedy@cloudflare.com>",
    "Andy Grover <agrover@cloudflare.com>",
    "Jeff Hiner <jhiner@cloudflare.com>",
]
license = "BSD-3-Clause"
repository = "https://github.com/cloudflare/boringtun"
documentation = "https://docs.rs/boringtun/0.5.2/boringtun/"
edition = "2021"

[features]
default = []
device = ["socket2", "thiserror", "dep:nix", "dep:base64", "dep:hex", "dep:libc", "dep:ip_network", "dep:ip_network_table"]
jni-bindings = ["ffi-bindings", "jni"]
ffi-bindings = ["tracing-subscriber", "dep:base64", "dep:hex", "dep:libc"]
mock-instant = ["mock_instant"]                  # Deprecated.
mock_instant = []                                # Deprecated.
thiserror = ["dep:thiserror"]                    # Deprecated.
tracing-subscriber = ["dep:tracing-subscriber"]  # Deprecated.
jni = ["dep:jni"]                                # Deprecated.
socket2 = ["dep:socket2"]                        # Deprecated.

[dependencies]
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }
libc = { version = "0.2", optional = true }
parking_lot = "0.12"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt"], optional = true }
ip_network = { version = "0.4.1", optional = true }
ip_network_table = { version = "0.2.0", optional = true }
ring = "0.17"
x25519-dalek = { version = "2.0.1", features = [
    "reusable_secrets",
    "static_secrets",
] }
rand = "0.10.0"
chacha20poly1305 = "0.10.1"
aead = "0.5.2"
blake2 = "0.10"
hmac = "0.12"
jni = { version = "0.19.0", optional = true }
socket2 = { version = "0.6.2", features = ["all"], optional = true }
thiserror = { version = "2", optional = true }
constant_time_eq = "0.4.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", optional = true, default-features = false, features = [
    "time",
    "user",
] }

[dev-dependencies]
etherparse = "0.19"
tracing-subscriber = "0.3"
criterion = { version = "0.8.2", features = ["html_reports"] }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bench]]
name = "crypto_benches"
harness = false
